2007-11-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/admin.py (AdminModel.__init__)
	(AdminModel.setRemoteReference.gotWorkerHeavenState)
	(AdminModel.setRemoteReference.remoteDisconnected)
	(AdminModel.isConnected): Store the connected state as a bool
	rather than a string. Praisebejesus.

	* flumotion/test/test_manager_admin.py (TestAdminAvatar): Rewrite
	test to use real objects, and no useless functions.

	* flumotion/admin/admin.py (AdminModel): Remove IStateListener
	implementation, we do not use this any more.
	(AdminModel.get_components, AdminModel.getComponents): Remove
	function without callers.
	(AdminModel._setWorkerHeavenState): Remove function without
	callers.

	* flumotion/manager/base.py (ManagerAvatar.hasRemoteReference):
	Remove unused method, there for a case that cannot exist.

	* flumotion/manager/manager.py (Vishnu._componentStopWithAvatar):
	Call methods on the componentAvatar, not callRemote directly.

	* flumotion/manager/component.py (ComponentAvatar.stop): Remove
	silliness.

	* flumotion/admin/multi.py (MultiAdminModel.removeManager)
	(MultiAdminModel._managerConnected): Fix removing a manager to
	which we connected one or more times, but is disconnected now.
	Case (4) in the comment.

2007-11-14  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/Makefile.am (EXTRA_DIST): Add test_public_ui_api.py
	* flumotion/test/test_public_ui_api.py (TestPublicUI): 
	New test to check our public API UI API

2007-11-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu.unregisterComponent): No
	need to muck with the component state here, planet.py does
	everything we need.

	* flumotion/common/planet.py (ManagerComponentState.set): If we
	are setting the mood to a value equal to the moodPending, clear
	moodPending. Restores previous behaviour.

2007-11-13  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/trayicon.py (FluTrayIcon): 
	* flumotion/admin/gtk/client.py (Window): 