@@ -5,6 +5,11 @@
 	(AdminModel.setRemoteReference.remoteDisconnected)
 	(AdminModel.isConnected): Store the connected state as a bool
 	rather than a string. Praisebejesus.
+	(AdminModel._callRemoteCallback, AdminModel._callRemoteErrback):
+	Remove logging callbacks, unnecessary now that our base medium
+	class does this for us.
+	(AdminModel.workerCallRemote, AdminModel.componentCallRemote):
+	Remove some unnecessary debug.
 
 	* flumotion/test/test_manager_admin.py (TestAdminAvatar): Rewrite
 	test to use real objects, and no useless functions.
